--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -63,16 +63,34 @@
     <a href="Flickrie/MediaCount.html">Flickrie::MediaCount</a>
   </li>
     <li class="module">
+    <a href="Flickrie/Middleware.html">Flickrie::Middleware</a>
+  </li>
+    <li class="class">
+    <a href="Flickrie/Middleware/OAuthCheck.html">Flickrie::Middleware::OAuthCheck</a>
+  </li>
+    <li class="class">
+    <a href="Flickrie/Middleware/ParseOAuthParams.html">Flickrie::Middleware::ParseOAuthParams</a>
+  </li>
+    <li class="class">
+    <a href="Flickrie/Middleware/Retry.html">Flickrie::Middleware::Retry</a>
+  </li>
+    <li class="class">
+    <a href="Flickrie/Middleware/StatusCheck.html">Flickrie::Middleware::StatusCheck</a>
+  </li>
+    <li class="class">
+    <a href="Flickrie/Middleware/UploadStatusCheck.html">Flickrie::Middleware::UploadStatusCheck</a>
+  </li>
+    <li class="module">
     <a href="Flickrie/OAuth.html">Flickrie::OAuth</a>
   </li>
     <li class="class">
     <a href="Flickrie/OAuth/AccessToken.html">Flickrie::OAuth::AccessToken</a>
   </li>
     <li class="class">
-    <a href="Flickrie/OAuth/Error.html">Flickrie::OAuth::Error</a>
-  </li>
-    <li class="class">
     <a href="Flickrie/OAuth/RequestToken.html">Flickrie::OAuth::RequestToken</a>
+  </li>
+    <li class="module">
+    <a href="Flickrie/OAuth/Token.html">Flickrie::OAuth::Token</a>
   </li>
     <li class="class">
     <a href="Flickrie/Photo.html">Flickrie::Photo</a>
@@ -103,55 +121,61 @@
   
     <li class="method"><a href="Flickrie/Media.html#method-c-included">::included &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/Video.html#method-c-new">::new &mdash; Flickrie::Video</a>
-  
     <li class="method"><a href="Flickrie/Media.html#method-c-new">::new &mdash; Flickrie::Media</a>
-  
-    <li class="method"><a href="Flickrie/Media.html#method-c-new">::new &mdash; Flickrie::Media</a>
-  
-    <li class="method"><a href="Flickrie/Media/Exif.html#method-c-new">::new &mdash; Flickrie::Media::Exif</a>
-  
-    <li class="method"><a href="Flickrie/Instance.html#method-c-new">::new &mdash; Flickrie::Instance</a>
   
     <li class="method"><a href="Flickrie/License.html#method-c-new">::new &mdash; Flickrie::License</a>
   
-    <li class="method"><a href="Flickrie/User.html#method-c-new">::new &mdash; Flickrie::User</a>
+    <li class="method"><a href="Flickrie/Video.html#method-c-new">::new &mdash; Flickrie::Video</a>
   
-    <li class="method"><a href="Flickrie/Ticket.html#method-c-new">::new &mdash; Flickrie::Ticket</a>
+    <li class="method"><a href="Flickrie/Middleware/Retry.html#method-c-new">::new &mdash; Flickrie::Middleware::Retry</a>
   
-    <li class="method"><a href="Flickrie/Set.html#method-c-new">::new &mdash; Flickrie::Set</a>
+    <li class="method"><a href="Flickrie/Media.html#method-c-new">::new &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/Photo.html#method-c-new">::new &mdash; Flickrie::Photo</a>
-  
-    <li class="method"><a href="Flickrie/MediaCount.html#method-c-new">::new &mdash; Flickrie::MediaCount</a>
+    <li class="method"><a href="Flickrie/OAuth/Token.html#method-c-new">::new &mdash; Flickrie::OAuth::Token</a>
   
     <li class="method"><a href="Flickrie/Media/Visibility.html#method-c-new">::new &mdash; Flickrie::Media::Visibility</a>
   
+    <li class="method"><a href="Flickrie/Instance.html#method-c-new">::new &mdash; Flickrie::Instance</a>
+  
+    <li class="method"><a href="Flickrie/Photo.html#method-c-new">::new &mdash; Flickrie::Photo</a>
+  
+    <li class="method"><a href="Flickrie/OAuth/AccessToken.html#method-c-new">::new &mdash; Flickrie::OAuth::AccessToken</a>
+  
+    <li class="method"><a href="Flickrie/Ticket.html#method-c-new">::new &mdash; Flickrie::Ticket</a>
+  
     <li class="method"><a href="Flickrie/Media/Tag.html#method-c-new">::new &mdash; Flickrie::Media::Tag</a>
   
-    <li class="method"><a href="Flickrie/Media/Note.html#method-c-new">::new &mdash; Flickrie::Media::Note</a>
+    <li class="method"><a href="Flickrie/User.html#method-c-new">::new &mdash; Flickrie::User</a>
   
     <li class="method"><a href="Flickrie/Location.html#method-c-new">::new &mdash; Flickrie::Location</a>
   
     <li class="method"><a href="Flickrie/Error.html#method-c-new">::new &mdash; Flickrie::Error</a>
   
-    <li class="method"><a href="Flickrie/Media/Exif.html#method-i-5B-5D">#[] &mdash; Flickrie::Media::Exif</a>
+    <li class="method"><a href="Flickrie/Media/Note.html#method-c-new">::new &mdash; Flickrie::Media::Note</a>
   
-    <li class="method"><a href="Flickrie/Ticket.html#method-i-5B-5D">#[] &mdash; Flickrie::Ticket</a>
+    <li class="method"><a href="Flickrie/Set.html#method-c-new">::new &mdash; Flickrie::Set</a>
   
-    <li class="method"><a href="Flickrie/User.html#method-i-5B-5D">#[] &mdash; Flickrie::User</a>
+    <li class="method"><a href="Flickrie/Media/Exif.html#method-c-new">::new &mdash; Flickrie::Media::Exif</a>
   
-    <li class="method"><a href="Flickrie/Media/Tag.html#method-i-5B-5D">#[] &mdash; Flickrie::Media::Tag</a>
+    <li class="method"><a href="Flickrie/MediaCount.html#method-c-new">::new &mdash; Flickrie::MediaCount</a>
   
     <li class="method"><a href="Flickrie/Media/Note.html#method-i-5B-5D">#[] &mdash; Flickrie::Media::Note</a>
   
     <li class="method"><a href="Flickrie/MediaCount.html#method-i-5B-5D">#[] &mdash; Flickrie::MediaCount</a>
   
+    <li class="method"><a href="Flickrie/Media/Exif.html#method-i-5B-5D">#[] &mdash; Flickrie::Media::Exif</a>
+  
+    <li class="method"><a href="Flickrie/User.html#method-i-5B-5D">#[] &mdash; Flickrie::User</a>
+  
     <li class="method"><a href="Flickrie/Media/Visibility.html#method-i-5B-5D">#[] &mdash; Flickrie::Media::Visibility</a>
+  
+    <li class="method"><a href="Flickrie/Ticket.html#method-i-5B-5D">#[] &mdash; Flickrie::Ticket</a>
   
     <li class="method"><a href="Flickrie/Media.html#method-i-5B-5D">#[] &mdash; Flickrie::Media</a>
   
     <li class="method"><a href="Flickrie/Location.html#method-i-5B-5D">#[] &mdash; Flickrie::Location</a>
+  
+    <li class="method"><a href="Flickrie/Media/Tag.html#method-i-5B-5D">#[] &mdash; Flickrie::Media::Tag</a>
   
     <li class="method"><a href="Flickrie/Set.html#method-i-5B-5D">#[] &mdash; Flickrie::Set</a>
   
@@ -165,9 +189,13 @@
   
     <li class="method"><a href="Flickrie/Media/Tag.html#method-i-author">#author &mdash; Flickrie::Media::Tag</a>
   
+    <li class="method"><a href="Flickrie/OAuth/RequestToken.html#method-i-authorize_url">#authorize_url &mdash; Flickrie::OAuth::RequestToken</a>
+  
     <li class="method"><a href="Flickrie/Photo.html#method-i-available_sizes">#available_sizes &mdash; Flickrie::Photo</a>
   
     <li class="method"><a href="Flickrie/User.html#method-i-buddy_icon_url">#buddy_icon_url &mdash; Flickrie::User</a>
+  
+    <li class="method"><a href="Flickrie/Middleware/Retry.html#method-i-call">#call &mdash; Flickrie::Middleware::Retry</a>
   
     <li class="method"><a href="Flickrie/Media.html#method-i-camera">#camera &mdash; Flickrie::Media</a>
   
@@ -257,9 +285,13 @@
   
     <li class="method"><a href="Flickrie/Media/Visibility.html#method-i-friends-3F">#friends? &mdash; Flickrie::Media::Visibility</a>
   
+    <li class="method"><a href="Flickrie/MediaCount.html#method-i-from">#from &mdash; Flickrie::MediaCount</a>
+  
     <li class="method"><a href="Flickrie/Media.html#method-i-geo_permissions">#geo_permissions &mdash; Flickrie::Media</a>
   
     <li class="method"><a href="Flickrie/Media/Exif.html#method-i-get">#get &mdash; Flickrie::Media::Exif</a>
+  
+    <li class="method"><a href="Flickrie/OAuth/RequestToken.html#method-i-get_access_token">#get_access_token &mdash; Flickrie::OAuth::RequestToken</a>
   
     <li class="method"><a href="Flickrie/OAuth/RequestToken.html#method-i-get_authorization_url">#get_authorization_url &mdash; Flickrie::OAuth::RequestToken</a>
   
@@ -267,13 +299,13 @@
   
     <li class="method"><a href="Flickrie/Media.html#method-i-get_favorites">#get_favorites &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/User.html#method-i-get_info">#get_info &mdash; Flickrie::User</a>
+    <li class="method"><a href="Flickrie/Media.html#method-i-get_info">#get_info &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/Video.html#method-i-get_info">#get_info &mdash; Flickrie::Video</a>
+    <li class="method"><a href="Flickrie/User.html#method-i-get_info">#get_info &mdash; Flickrie::User</a>
   
     <li class="method"><a href="Flickrie/Set.html#method-i-get_info">#get_info &mdash; Flickrie::Set</a>
   
-    <li class="method"><a href="Flickrie/Media.html#method-i-get_info">#get_info &mdash; Flickrie::Media</a>
+    <li class="method"><a href="Flickrie/Video.html#method-i-get_info">#get_info &mdash; Flickrie::Video</a>
   
     <li class="method"><a href="Flickrie/ApiMethods.html#method-i-get_licenses">#get_licenses &mdash; Flickrie::ApiMethods</a>
   
@@ -317,43 +349,43 @@
   
     <li class="method"><a href="Flickrie/Media.html#method-i-has_people-3F">#has_people? &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/Media/Visibility.html#method-i-hash">#hash &mdash; Flickrie::Media::Visibility</a>
-  
-    <li class="method"><a href="Flickrie/Set.html#method-i-hash">#hash &mdash; Flickrie::Set</a>
+    <li class="method"><a href="Flickrie/Media/Note.html#method-i-hash">#hash &mdash; Flickrie::Media::Note</a>
   
     <li class="method"><a href="Flickrie/User.html#method-i-hash">#hash &mdash; Flickrie::User</a>
   
-    <li class="method"><a href="Flickrie/Media/Tag.html#method-i-hash">#hash &mdash; Flickrie::Media::Tag</a>
-  
-    <li class="method"><a href="Flickrie/Media/Exif.html#method-i-hash">#hash &mdash; Flickrie::Media::Exif</a>
-  
-    <li class="method"><a href="Flickrie/MediaCount.html#method-i-hash">#hash &mdash; Flickrie::MediaCount</a>
-  
-    <li class="method"><a href="Flickrie/Media/Note.html#method-i-hash">#hash &mdash; Flickrie::Media::Note</a>
+    <li class="method"><a href="Flickrie/Media.html#method-i-hash">#hash &mdash; Flickrie::Media</a>
   
     <li class="method"><a href="Flickrie/Location.html#method-i-hash">#hash &mdash; Flickrie::Location</a>
   
-    <li class="method"><a href="Flickrie/Media.html#method-i-hash">#hash &mdash; Flickrie::Media</a>
+    <li class="method"><a href="Flickrie/Set.html#method-i-hash">#hash &mdash; Flickrie::Set</a>
+  
+    <li class="method"><a href="Flickrie/Media/Tag.html#method-i-hash">#hash &mdash; Flickrie::Media::Tag</a>
   
     <li class="method"><a href="Flickrie/Ticket.html#method-i-hash">#hash &mdash; Flickrie::Ticket</a>
   
-    <li class="method"><a href="Flickrie/Photo.html#method-i-height">#height &mdash; Flickrie::Photo</a>
+    <li class="method"><a href="Flickrie/MediaCount.html#method-i-hash">#hash &mdash; Flickrie::MediaCount</a>
+  
+    <li class="method"><a href="Flickrie/Media/Exif.html#method-i-hash">#hash &mdash; Flickrie::Media::Exif</a>
+  
+    <li class="method"><a href="Flickrie/Media/Visibility.html#method-i-hash">#hash &mdash; Flickrie::Media::Visibility</a>
   
     <li class="method"><a href="Flickrie/Video.html#method-i-height">#height &mdash; Flickrie::Video</a>
+  
+    <li class="method"><a href="Flickrie/Photo.html#method-i-height">#height &mdash; Flickrie::Photo</a>
   
     <li class="method"><a href="Flickrie/User.html#method-i-icon_farm">#icon_farm &mdash; Flickrie::User</a>
   
     <li class="method"><a href="Flickrie/User.html#method-i-icon_server">#icon_server &mdash; Flickrie::User</a>
   
+    <li class="method"><a href="Flickrie/Media.html#method-i-id">#id &mdash; Flickrie::Media</a>
+  
     <li class="method"><a href="Flickrie/Ticket.html#method-i-id">#id &mdash; Flickrie::Ticket</a>
-  
-    <li class="method"><a href="Flickrie/Media/Tag.html#method-i-id">#id &mdash; Flickrie::Media::Tag</a>
-  
-    <li class="method"><a href="Flickrie/Set.html#method-i-id">#id &mdash; Flickrie::Set</a>
   
     <li class="method"><a href="Flickrie/User.html#method-i-id">#id &mdash; Flickrie::User</a>
   
-    <li class="method"><a href="Flickrie/Media.html#method-i-id">#id &mdash; Flickrie::Media</a>
+    <li class="method"><a href="Flickrie/Set.html#method-i-id">#id &mdash; Flickrie::Set</a>
+  
+    <li class="method"><a href="Flickrie/Media/Tag.html#method-i-id">#id &mdash; Flickrie::Media::Tag</a>
   
     <li class="method"><a href="Flickrie/Ticket.html#method-i-imported_at">#imported_at &mdash; Flickrie::Ticket</a>
   
@@ -431,6 +463,12 @@
   
     <li class="method"><a href="Flickrie/User.html#method-i-nsid">#nsid &mdash; Flickrie::User</a>
   
+    <li class="method"><a href="Flickrie/Middleware/StatusCheck.html#method-i-on_complete">#on_complete &mdash; Flickrie::Middleware::StatusCheck</a>
+  
+    <li class="method"><a href="Flickrie/Middleware/OAuthCheck.html#method-i-on_complete">#on_complete &mdash; Flickrie::Middleware::OAuthCheck</a>
+  
+    <li class="method"><a href="Flickrie/Middleware/UploadStatusCheck.html#method-i-on_complete">#on_complete &mdash; Flickrie::Middleware::UploadStatusCheck</a>
+  
     <li class="method"><a href="Flickrie/Photo.html#method-i-original">#original &mdash; Flickrie::Photo</a>
   
     <li class="method"><a href="Flickrie/Photo.html#method-i-original-21">#original! &mdash; Flickrie::Photo</a>
@@ -439,9 +477,9 @@
   
     <li class="method"><a href="Flickrie/Media.html#method-i-owner">#owner &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/User.html#method-i-path_alias">#path_alias &mdash; Flickrie::User</a>
-  
     <li class="method"><a href="Flickrie/Media.html#method-i-path_alias">#path_alias &mdash; Flickrie::Media</a>
+  
+    <li class="method"><a href="Flickrie/User.html#method-i-path_alias">#path_alias &mdash; Flickrie::User</a>
   
     <li class="method"><a href="Flickrie/Video.html#method-i-pending-3F">#pending? &mdash; Flickrie::Video</a>
   
@@ -449,9 +487,9 @@
   
     <li class="method"><a href="Flickrie/Set.html#method-i-photos">#photos &mdash; Flickrie::Set</a>
   
-    <li class="method"><a href="Flickrie/Set.html#method-i-photos_count">#photos_count &mdash; Flickrie::Set</a>
-  
     <li class="method"><a href="Flickrie/User.html#method-i-photos_count">#photos_count &mdash; Flickrie::User</a>
+  
+    <li class="method"><a href="Flickrie/Set.html#method-i-photos_count">#photos_count &mdash; Flickrie::Set</a>
   
     <li class="method"><a href="Flickrie/ApiMethods.html#method-i-photos_from_contacts">#photos_from_contacts &mdash; Flickrie::ApiMethods</a>
   
@@ -547,9 +585,9 @@
   
     <li class="method"><a href="Flickrie/Photo.html#method-i-small320-21">#small320! &mdash; Flickrie::Photo</a>
   
-    <li class="method"><a href="Flickrie/Video.html#method-i-source_url">#source_url &mdash; Flickrie::Video</a>
-  
     <li class="method"><a href="Flickrie/Photo.html#method-i-source_url">#source_url &mdash; Flickrie::Photo</a>
+  
+    <li class="method"><a href="Flickrie/Video.html#method-i-source_url">#source_url &mdash; Flickrie::Video</a>
   
     <li class="method"><a href="Flickrie/Photo.html#method-i-square">#square &mdash; Flickrie::Photo</a>
   
@@ -579,9 +617,13 @@
   
     <li class="method"><a href="Flickrie/User.html#method-i-time_zone">#time_zone &mdash; Flickrie::User</a>
   
+    <li class="method"><a href="Flickrie/Media.html#method-i-title">#title &mdash; Flickrie::Media</a>
+  
     <li class="method"><a href="Flickrie/Set.html#method-i-title">#title &mdash; Flickrie::Set</a>
   
-    <li class="method"><a href="Flickrie/Media.html#method-i-title">#title &mdash; Flickrie::Media</a>
+    <li class="method"><a href="Flickrie/MediaCount.html#method-i-to">#to &mdash; Flickrie::MediaCount</a>
+  
+    <li class="method"><a href="Flickrie/OAuth/Token.html#method-i-to_a">#to_a &mdash; Flickrie::OAuth::Token</a>
   
     <li class="method"><a href="Flickrie/Media/Note.html#method-i-to_s">#to_s &mdash; Flickrie::Media::Note</a>
   
@@ -595,9 +637,9 @@
   
     <li class="method"><a href="Flickrie/Media.html#method-i-uploaded_at">#uploaded_at &mdash; Flickrie::Media</a>
   
-    <li class="method"><a href="Flickrie/Set.html#method-i-url">#url &mdash; Flickrie::Set</a>
-  
     <li class="method"><a href="Flickrie/Media.html#method-i-url">#url &mdash; Flickrie::Media</a>
+  
+    <li class="method"><a href="Flickrie/Set.html#method-i-url">#url &mdash; Flickrie::Set</a>
   
     <li class="method"><a href="Flickrie/User.html#method-i-username">#username &mdash; Flickrie::User</a>
   
@@ -607,9 +649,9 @@
   
     <li class="method"><a href="Flickrie/Set.html#method-i-videos">#videos &mdash; Flickrie::Set</a>
   
-    <li class="method"><a href="Flickrie/User.html#method-i-videos_count">#videos_count &mdash; Flickrie::User</a>
-  
     <li class="method"><a href="Flickrie/Set.html#method-i-videos_count">#videos_count &mdash; Flickrie::Set</a>
+  
+    <li class="method"><a href="Flickrie/User.html#method-i-videos_count">#videos_count &mdash; Flickrie::User</a>
   
     <li class="method"><a href="Flickrie/ApiMethods.html#method-i-videos_from_contacts">#videos_from_contacts &mdash; Flickrie::ApiMethods</a>
   
@@ -617,9 +659,9 @@
   
     <li class="method"><a href="Flickrie/ApiMethods.html#method-i-videos_from_user">#videos_from_user &mdash; Flickrie::ApiMethods</a>
   
-    <li class="method"><a href="Flickrie/Set.html#method-i-views_count">#views_count &mdash; Flickrie::Set</a>
-  
     <li class="method"><a href="Flickrie/Media.html#method-i-views_count">#views_count &mdash; Flickrie::Media</a>
+  
+    <li class="method"><a href="Flickrie/Set.html#method-i-views_count">#views_count &mdash; Flickrie::Set</a>
   
     <li class="method"><a href="Flickrie/Media.html#method-i-visibility">#visibility &mdash; Flickrie::Media</a>
   
